[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celerity-sdk"
version = "0.1.0"
description = "Python SDK for building Celerity applications"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Celerity Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
runtime = [
    "celerity-runtime-sdk>=0.2.0",
]
cli = []
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
aws = [
    "boto3>=1.34",
]
gcp = [
    "functions-framework>=3.0",
]
azure = [
    "azure-functions>=1.17",
]
resources = [
    "aioboto3>=13.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiomysql>=0.2",
    "redis[hiredis]>=5.0",
]
telemetry = [
    "structlog>=24.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=0.48",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-sdk-extension-aws>=2.0",
    "opentelemetry-propagator-aws-xray>=1.0",
]
dev = [
    "celerity-sdk[test]",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-cov>=6.0",
]

[project.scripts]
celerity-extract = "celerity.cli.extract:main"

[tool.hatch.build.targets.wheel]
packages = ["src/celerity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["celerity"]
