[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celerity-sdk"
version = "0.2.1"
description = "Python SDK for building Celerity applications"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Celerity Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = ["pydantic>=2.0", "aiohttp>=3.9"]

[project.optional-dependencies]
runtime = ["celerity-runtime-sdk>=0.2.0"]
cli = []
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]
aws = ["boto3>=1.34", "aioboto3>=13.0"]
cache = ["redis[hiredis]>=5.0"]
gcp = ["functions-framework>=3.0"]
azure = ["azure-functions>=1.17"]
resources-sql = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiomysql>=0.2",
]
telemetry = [
    "structlog>=24.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=0.48",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-sdk-extension-aws>=2.0",
    "opentelemetry-propagator-aws-xray>=1.0",
]
dev = [
    "celerity-sdk[test,runtime,aws,cache,resources-sql,telemetry]",
    "boto3-stubs>=1.34",
    "types-aioboto3>=13.0",
    "types-aiobotocore-dynamodb>=2.15",
    "types-aiobotocore-s3>=2.15",
    "types-aiobotocore-sqs>=2.15",
    "types-aiobotocore-sns>=2.15",
    "types-aiobotocore-rds>=2.15",
    "types-redis>=4.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-cov>=6.0",
]

[project.scripts]
celerity-extract = "celerity.cli.extract:main"

[tool.hatch.build.targets.wheel]
packages = ["src/celerity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["comparison-overlap"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["pytest.*", "pytest_asyncio.*", "_pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celerity.telemetry.*"]
ignore_missing_imports = true


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.flake8]
max-line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/celerity/bootstrap/runtime_mapper.py" = ["TC002", "I001"]
"tests/**" = ["TC002"]

[tool.ruff.lint.isort]
known-first-party = ["celerity"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
